tests/fixtures/invalid/bin_list.py
# Cannot call bin() with List[int]
x = bin([1, 2, 3])
